--- a/pages/paycheck-calculator/illinois-paycheck-calculator.mdx
+++ b/pages/paycheck-calculator/illinois-paycheck-calculator.mdx
@@ -8,7 +8,7 @@ import { PaycheckCalculator } from '@components/paycheckcalc/PaycheckCalculator'
 
 <h1 className="text-2xl md:text-3xl font-bold text-gray-800 mb- mt-3 text-center">Illinois Paycheck Calculator</h1>
 
-<div className="mb-3 prose prose-blue max-w-none bg-gray-100 px-4 py-2 rounded-lg">
+<div className="my-3 prose prose-blue max-w-none bg-gray-100 px-4 py-2 rounded-lg">
     <p className="text-gray-600">
     Welcome to our **Illinois Paycheck Calculator**! This tool helps you accurately calculate your after-tax income for work in Illinois. Whether you're a full-time employee or a freelancer, simply input your salary details, and we’ll calculate your take-home pay after taxes. With Illinois state income tax, federal tax deductions, and other important factors, our tool ensures that you understand how much you’ll be taking home.
     </p>
