--- a/pages/paycheck-calculator/michigan-paycheck-calculator.mdx
+++ b/pages/paycheck-calculator/michigan-paycheck-calculator.mdx
@@ -8,7 +8,7 @@ import { PaycheckCalculator } from '@components/paycheckcalc/PaycheckCalculator'
 
 <h1 className="text-2xl md:text-3xl font-bold text-gray-800 mb- mt-3 text-center">Michigan Paycheck Calculator</h1>
 
-<div className="mb-3 prose prose-blue max-w-none bg-gray-100 px-4 py-2 rounded-lg">
+<div className="my-3 prose prose-blue max-w-none bg-gray-100 px-4 py-2 rounded-lg">
     <p className="text-gray-600">
 Welcome to our **Michigan Paycheck Calculator**! This tool is designed to help you calculate your after-tax income for work in Michigan. Michigan imposes both **state income tax** and **local taxes** in some areas, which can impact how much you take home. Simply enter your salary details, and we’ll calculate your take-home pay after taxes, including state, federal, and local deductions.
     </p>
