--- a/pages/paycheck-calculator/pennsylvania-paycheck-calculator.mdx
+++ b/pages/paycheck-calculator/pennsylvania-paycheck-calculator.mdx
@@ -8,7 +8,7 @@ import {PaycheckCalculator } from '@components/paycheckcalc/PaycheckCalculator';
 
 <h1 className="text-2xl md:text-3xl font-bold text-gray-800 mb- mt-3 text-center">Pennsylvania Paycheck Calculator</h1>
 
-<div className="mb-3 prose prose-blue max-w-none bg-gray-100 px-4 py-2 rounded-lg">
+<div className="my-3 prose prose-blue max-w-none bg-gray-100 px-4 py-2 rounded-lg">
     <p className="text-gray-600">
       Welcome to our **Pennsylvania Paycheck Calculator**! 
       This tool helps you accurately calculate your after-tax income in Pennsylvania. 
