--- a/pages/paycheck-calculator/washington-paycheck-calculator.mdx
+++ b/pages/paycheck-calculator/washington-paycheck-calculator.mdx
@@ -8,7 +8,7 @@ import { PaycheckCalculator } from '@components/paycheckcalc/PaycheckCalculator'
 
 <h1 className="text-2xl md:text-3xl font-bold text-gray-800 mb- mt-3 text-center">Washington Paycheck Calculator</h1>
 
-<div className="mb-3 prose prose-blue max-w-none bg-gray-100 px-4 py-2 rounded-lg">
+<div className="my-3 prose prose-blue max-w-none bg-gray-100 px-4 py-2 rounded-lg">
     <p className="text-gray-600">
         Welcome to our **Washington Paycheck Calculator**! This tool helps you accurately calculate your after-tax income in Washington. Washington is one of the few states that does not have a **state income tax**, which can simplify your paycheck calculations. However, other federal taxes and deductions still apply. Simply input your salary details, and we’ll calculate your after-tax income to help you manage your finances better.
     </p>
