--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,5 +8,12 @@ date: 2024-06-30
 
 Calculate anything easily with Easy Calculator.
 
+## Calculators
+- [Pennsylvania Paycheck Calculator](/paycheck-calculator/pennsylvania-paycheck-calculator)
+- [Illinois Paycheck Calculator](/paycheck-calculator/illinois-paycheck-calculator)
+- [Maryland Paycheck Calculator](/paycheck-calculator/maryland-paycheck-calculator)
+- [Michigan Paycheck Calculator](/paycheck-calculator/michigan-paycheck-calculator)
+- [New Jersey Paycheck Calculator](/paycheck-calculator/new-jersey-paycheck-calculator)
+- [Washington Paycheck Calculator](/paycheck-calculator/washington-paycheck-calculator)
 
 
