add more paycheck calculators

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -15,5 +15,11 @@ Calculate anything easily with Easy Calculator.
 - [Michigan Paycheck Calculator](/paycheck-calculator/michigan-paycheck-calculator)
 - [New Jersey Paycheck Calculator](/paycheck-calculator/new-jersey-paycheck-calculator)
 - [Washington Paycheck Calculator](/paycheck-calculator/washington-paycheck-calculator)
+- [Indiana Paycheck Calculator](/paycheck-calculator/indiana-paycheck-calculator)
+- [Missouri Paycheck Calculator](/paycheck-calculator/missouri-paycheck-calculator)
+- [Oregon Paycheck Calculator](/paycheck-calculator/oregon-paycheck-calculator)
+- [Tennessee Paycheck Calculator](/paycheck-calculator/tennessee-paycheck-calculator)
+- [Virginia Paycheck Calculator](/paycheck-calculator/virginia-paycheck-calculator)
+- [Wisconsin Paycheck Calculator](/paycheck-calculator/wisconsin-paycheck-calculator)
 
 
