--- a/pages/paycheck-calculator/new-jersey-paycheck-calculator.mdx
+++ b/pages/paycheck-calculator/new-jersey-paycheck-calculator.mdx
@@ -14,7 +14,7 @@ import { PaycheckCalculator } from '@components/paycheckcalc/PaycheckCalculator'
     </p>
 </div>
 
-<PaycheckCalculator stateTaxType="progressive" stateTaxBracket={[{ payBracket: 20000, rate: 0.014 },{ payBracket: 35000, rate: 0.0175 },{ payBracket: 40000, rate: 0.035 },{ payBracket: 75000, rate: 0.05525 },{ payBracket: 500000, rate: 0.0637 },{ payBracket: 1000000, rate: 0.0897 },{ payBracket: -1, rate: 0.1075 }]}/>
+<PaycheckCalculator stateTaxType="progressive" stateTaxBracket={[{ payBracket: 20000, rate: 0.014 },{ payBracket: 35000, rate: 0.0175 },{ payBracket: 40000, rate: 0.035 },{ payBracket: 75000, rate: 0.05525 },{ payBracket: 500000, rate: 0.0637 },{ payBracket: 1000000, rate: 0.0897 },{ payBracket: Infinity, rate: 0.1075 }]}/>
 
 ---
 
