--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,12 +1,12 @@
 ---
-title: Easy Calculator
-description: Calculate anything easily with Easy Calculator.
+title: Calculate your paycheck easily with EzCalc.
+description: Calculate your paycheck easily with EzCalc.
 date: 2024-06-30
 ---
 
-# Easy Calculator
+# EzCalc
 
-Calculate anything easily with Easy Calculator.
+Calculate your paycheck easily with EzCalc.
 
 ## Calculators
 - [Pennsylvania Paycheck Calculator](/paycheck-calculator/pennsylvania-paycheck-calculator)
