--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,7 +8,7 @@ date: 2024-06-30
 
 Calculate your paycheck easily with EzCalc.
 
-## Calculators
+## Paycheck Calculators
 - [Pennsylvania Paycheck Calculator](/paycheck-calculator/pennsylvania-paycheck-calculator)
 - [Illinois Paycheck Calculator](/paycheck-calculator/illinois-paycheck-calculator)
 - [Maryland Paycheck Calculator](/paycheck-calculator/maryland-paycheck-calculator)
